# game-of-life

./: .gitignore  README.md  game.py  pyproject.toml
