[tool.poetry]
name = "gameoflife"
version = "0.1.0"
description = ""
authors = ["Marcos Gabarda <hey@marcosgabarda.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^5.4.1"
pylint = "^2.4.4"
black = "^19.10b0"
numpy = "^1.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
